--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask
-gunicorn
-python-dotenv
-qrcode
-twilio
-weasyprint
-
+flask==2.3.2
+gunicorn==20.1.0
+psycopg2-binary==2.9.6
+weasyprint==57.2
+qrcode[pil]==7.4.2
+python-dotenv==1.0.0
+werkzeug==2.3.6
