--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
-flask==2.3.2
-gunicorn==20.1.0
-psycopg2-binary==2.9.6
+
 weasyprint==57.2
 qrcode[pil]==7.4.2
-python-dotenv==1.0.0
+
 werkzeug==2.3.6
+# Core dependencies
+Flask==3.0.2
+gunicorn==21.2.0
+Werkzeug==3.0.1
+
+# Database
+psycopg2-binary==2.9.9  # Use binary version for Python 3.13 compatibility
+
+# Environment and security
+python-dotenv==1.0.1
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+
+# Optional but recommended
+click==8.1.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+SQLAlchemy==2.0.25
+alembic==1.13.1
