--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flask==2.3.2
-gunicorn==20.1.0
-psycopg[binary]==3.2.9  # Latest stable version that works with Python 3.13
+Flask==3.0.2
+gunicorn==21.2.0
+psycopg2-binary==2.9.9  # Use binary version for easier installation
 weasyprint==57.2
 qrcode[pil]==7.4.2
-werkzeug==2.3.6
-python-dotenv==1.0.0
-psycopg2-binary
+python-dotenv==1.0.1  # For loading .env files
+Werkzeug==3.0.1  # Explicitly pin Werkzeug version
+
 
 
