--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://user:password@localhost/dbname
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 SECRET_KEY=your-secret-key-here
+FLASK_ENV=development
