--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/dbname
-SECRET_KEY=your-secret-key-here
-FLASK_ENV=5000
+DATABASE_URL="postgresql://user:password@ep-project-ref-pooler.region.neon.tech/dbname?sslmode=require"
+FLASK_SECRET_KEY="your-secret-key-here"
