--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://user:password@ep-project-ref-pooler.region.neon.tech/dbname?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_w0K6vJeICPxm@ep-dawn-fog-a8u0oe8x-pooler.eastus2.azure.neon.tech/neondb?sslmode=require"
 FLASK_SECRET_KEY="your-secret-key-here"
